--- a/frontend/src/Components/Style/color.css
+++ b/frontend/src/Components/Style/color.css
@@ -1,6 +1,6 @@
 :root {
-    --blue: #0C2D57;
+    --blue: #072040;
     --pink: #FFB0B0;
-    --orange: #FC6736;
+    --orange: #ff5b25;
     --white: #EFECEC;
   }
