--- a/frontend/src/Components/Style/About.css
+++ b/frontend/src/Components/Style/About.css
@@ -15,6 +15,7 @@
     border-bottom-left-radius: 60px;
 }
 .about h1{
+    padding: 10px;
     margin-top: 5%;
     padding-left: 20px;
     background-color: var(--orange);
