--- a/frontend/src/Components/Style/Contact.css
+++ b/frontend/src/Components/Style/Contact.css
@@ -10,10 +10,84 @@
     margin-top: 5%;
     padding-left: 20px;
     background-color: var(--orange);
-    width: 250px;
+    width: 350px;
     border-top-right-radius: 60px;
     border-bottom-right-radius: 60px;
+    margin-top: 150px;
 }
 .contact .details{
     background-color: var(--white);
+    border-radius: 30px;
+}
+.details .info{
+    font-size: 17px;
+    text-align: center;
+    padding: 30px;
+}
+.details .form{
+    font-size: 17px;
+    text-align: center;
+    padding: 30px;
+}
+.form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.form textarea{
+    border: 2px solid var(--blue);
+    border-radius: 30px;
+    padding: 30px;
+}
+.submit{
+    color: var(--white);
+    margin: 10px;
+    background-color: var(--blue);
+    border: 3px solid var(--orange);
+    border-radius: 10px;
+    padding: 10px;
+}
+.submit:hover{
+    color: var(--blue);
+    background-color: var(--orange);
+    border: 3px solid var(--blue);
+}
+
+@media only screen and (max-width: 1012px) {
+    .contact h1{
+        margin-top: 5%;
+        width: 280px;
+        padding-left: 30px;
+        padding-right: 30px;
+        margin-top: 140px;
+    }
+    .form textarea{
+        position: relative;
+        bottom: 50px;
+    }
+    .submit{
+        position: relative;
+        bottom: 50px;
+    }
+    .details .form{
+        padding-bottom: 0px;
+    }
+}
+@media only screen and (max-width: 767px) {
+    .contact h1{
+        margin-top: 5%;
+        width: 240px;
+    }
+    .form textarea{
+        position: relative;
+        bottom: 50px;
+    }
+    .submit{
+        position: relative;
+        bottom: 50px;
+    }
+    .details .form{
+        padding-bottom: 0px;
+    }
 }
