--- a/frontend/src/Components/Style/About.css
+++ b/frontend/src/Components/Style/About.css
@@ -1,6 +1,15 @@
 @import './color.css';
 @import url('https://fonts.googleapis.com/css2?family=Freeman&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+.username{
+    width: 300px;
+    height: 80px;
+    color: var(--orange);
+    background-color: var(--blue);
+    margin: auto;
+    text-align: center;
+    padding-top: 10px;
+    border-radius: 10px;
+}
 .about{
     /* width: 100vw; */
     margin: 0;
