--- a/frontend/src/Components/Style/login.css
+++ b/frontend/src/Components/Style/login.css
@@ -1,8 +1,8 @@
 @import './color.css';
 @import url('https://fonts.googleapis.com/css2?family=Freeman&display=swap');
 body{
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
     background-color: var(--blue);
 }
 .login{
