--- a/frontend/src/Components/Style/university.css
+++ b/frontend/src/Components/Style/university.css
@@ -3,22 +3,20 @@
 body{
     font-family: "Kanit", sans-serif; 
 }
+.university{
+     background-color: var(--white);
+}
 .university .leftSideBar{
-    /* width: 100%; */
-    /* height: 100vh; */
     background-color: var(--blue);
     color: var(--white);
-    padding: 20px;
+    padding-top: 30px;
     font-family: "Kanit", sans-serif;
 }
 .university .rightBody{
-    /* width: 100%; */
     height: 100vh;
-    background-color: var(--white);
+    padding: 30px;
     font-family: "Kanit", sans-serif;
 }
-
-.dropdown-column {
-    margin-bottom: 10px; /* Add margin between dropdowns */
-    
-  }
+.details .uniName{
+    text-align: center;
+}
