created Api to ge course details

--- a/frontend/src/Components/Style/university.css
+++ b/frontend/src/Components/Style/university.css
@@ -4,9 +4,11 @@ body{
     font-family: "Kanit", sans-serif; 
 }
 .university{
+    min-height: 100vh;
      background-color: var(--white);
 }
 .university .leftSideBar{
+    max-height: 100vh;
     background-color: var(--blue);
     color: var(--white);
     padding-top: 30px;
@@ -16,6 +18,15 @@ body{
     height: 100vh;
     padding: 30px;
     font-family: "Kanit", sans-serif;
+}
+.details .facname{
+    background-color: var(--blue);
+    color: var(--white);
+    display: flex;
+    flex-direction: column;
+    padding: 2% 15%;
+    margin: 1%;
+    border-bottom: 2px solid var(--white);
 }
 .details .uniName{
     text-align: center;
