--- a/frontend/src/Components/Style/Details.css
+++ b/frontend/src/Components/Style/Details.css
@@ -4,14 +4,13 @@
 .user-form-container {
     font-family: "Freeman", sans-serif;
     min-height: 100vh;
-    padding: 9% 10px;
+    /* padding: 9% 10px; */
     background-color: var(--blue);
   }
   .user-form-container .info{
     margin: auto;
-    /* background-color: aqua; */
     padding: 2%;
-   max-width: 800px;
+    max-width: 800px;
   }
   .user-form-container h1{
     color: var(--orange);
