--- a/frontend/src/Components/Style/Profile.css
+++ b/frontend/src/Components/Style/Profile.css
@@ -1,12 +1,21 @@
+@import './color.css';
+@import url('https://fonts.googleapis.com/css2?family=Freeman&display=swap');
 .profile-container {
-    max-width: 400px;
+    max-width: 100vw;
     margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: var(--blue);
+    font-family: "Freeman", sans-serif;
+    height: 100vh;
   }
-  
+.profile_box{
+  max-width:400px ;
+  background-color: var(--white);
+  margin: 80px auto;
+  border: 1px solid #ccc;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}  
   h2 {
     text-align: center;
   }
