--- a/frontend/src/Components/Style/Profile.css
+++ b/frontend/src/Components/Style/Profile.css
@@ -3,15 +3,18 @@
 .profile-container {
     max-width: 100vw;
     margin: 0 auto;
-    background-color: var(--blue);
+    background-color: var(--white);
     font-family: "Freeman", sans-serif;
     height: 100vh;
   }
 .profile_box{
   max-width:400px ;
-  background-color: var(--white);
+  background-color: var(--blue);
   margin: 80px auto;
   border: 1px solid #ccc;
+  color: var(--white);
+  font-size: 20px;
+  letter-spacing: 1px;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
