--- a/frontend/src/Components/Style/color.css
+++ b/frontend/src/Components/Style/color.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Freeman&family=Sedan+SC&display=swap');
 :root {
     font-family: "Sedan SC", serif;
-    --blue: #072040;
-    --pink: #FFB0B0;
-    --orange: #ff5b25;
-    --white: #EFECEC;
+    --blue: #0F1035;
+    --pink: #365486;
+    --orange: #7FC7D9;
+    --white: #DCF2F1;
   }
