--- a/frontend/src/Components/Style/Friend.css
+++ b/frontend/src/Components/Style/Friend.css
@@ -11,12 +11,15 @@
     justify-content: center;
     background-color: var(--white);
     /* background-color: aqua; */
-    padding: 10px;
+    padding: 20px;
 }
 .friend .buttonGroup button{
     background-color: var(--blue);
     color: var(--white);
     border-radius: 10px;
+    padding: 10px;
+    letter-spacing: 2px;
+    margin-left: 10px;
 }
 .friend .buttonGroup button:focus{
   background-color: var(--orange);
