--- a/frontend/src/Components/Style/Sidebar.css
+++ b/frontend/src/Components/Style/Sidebar.css
@@ -1,9 +1,10 @@
 .sidebar {
     width: 250px;
-    min-height:86vh;
+    min-height:89vh;
     background-color: var(--blue);
 }
 .sidebar .nav-link {
+    margin-top: 30px;
     width: 250px;
     color: var(--white);
     font-weight: 600;
@@ -21,20 +22,44 @@
     background-color: var(--white);
     color: var(--blue);
     border-left: var(--blue);
+    font-weight: 600;
 }
 
 .sidebar .icon {
     margin-right: 10px;
     font-size: 1.3rem;
 }
-@media only screen and (max-width: 900px) {
+/* @media only screen and (max-width: 767px) {
     .sidebar {
-       width: 100vw;
-        height: 100%;
+       min-width: 750px;
+        min-height: 10px;
     }
     .sidebar .nav-link {
-        width: 150px;
+        width: 135px;
         display: flex;
         flex-direction: row;
+        padding-left: 20px;
+        size: 4x;
     }
-}
+    .sidebar .nav-link span{
+        display: none;
+
+    }
+} */
+/* @media only screen and (max-width: 600px) {
+    .sidebar {
+       width: 650px;
+        min-height: 10px;
+    }
+    .sidebar .nav-link {
+        width: 135px;
+        display: flex;
+        flex-direction: row;
+        padding-left: 20px;
+        size: 4x;
+    }
+    .sidebar .nav-link span{
+        display: none;
+
+    }
+} */
