--- a/frontend/src/Components/Style/Admin.css
+++ b/frontend/src/Components/Style/Admin.css
@@ -1,18 +1,19 @@
 @import './color.css';
 @import url('https://fonts.googleapis.com/css2?family=Freeman&display=swap');
+
 .profileAdmincontainer {
     max-width: 100vw;
-    margin: 0 auto;
     background-color: var(--white);
     font-family: "Freeman", sans-serif;
     padding-bottom: 20px;
-    max-height: 100vh;
   }
+.AdminPro{
+  width: 100%;
+  background-color: var(--white);
+}
 .profileBox{
   width:400px;
   background-color: var(--blue);
-  margin-top: 100px;
-  margin-left: 80px;
   border: 1px solid var(--blue);
   color: var(--white);
   font-size: 20px;
@@ -21,6 +22,8 @@
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
   text-align: center;
+  margin-top: 15%;
+  margin-left: 10%;
 }  
 .profileBox  h2 {
     text-align: center;
@@ -62,45 +65,31 @@
   .profileBox button + button {
     margin-left: 10px;
   }
-  /* @media only screen and (max-width: 767px) {
-    .profileAdmincontainer {
-        width: 500px;
-        height: 320px;
-      }
+  @media only screen and (max-width: 992px) {
     .profileBox{
-        width: 500px;
-        margin-top: 10%;
-        margin-left: 180px;
+      margin-top: 15%;
+      margin-left: 16%;
     }
-  } */
-  /* @media only screen and (max-width: 600px) {
-    .profileAdmincontainer {
-        width: 748px;
-        height: 320px;
-      }
+  }
+  @media only screen and (max-width: 680px) {
     .profileBox{
-        padding-top: 50px;
-        width: 560px ;
-        min-height: 350px;
-        font-size: 25px;
-        margin-top: 15%;
-        margin-left: 100px;
-    }} */
-    /* @media only screen and (max-width: 500px) {
+      margin-top: 20%;
+      margin-left: 6%;
+    }
+    }
+    @media only screen and (max-width: 560px) {
         .profileBox{
-            padding-top: 50px;
-            width: 650px ;
-            min-height: 420px;
-            font-size: 30px;
-            margin-top: 20%;
-            margin-left: 60px;
-        }} */
-        /* @media only screen and (max-width: 500px) {
-            .profileBox{
-                padding-top: 50px;
-                width: 650px ;
-                min-height: 520px;
-                font-size: 40px;
-                margin-top: 20%;
-                margin-left: 60px;
-            }} */
+            width: 300px ;
+            margin-top: 30%;   
+        }}
+        @media only screen and (max-width: 420px) {
+          .profileBox{
+              width: 260px ;
+              padding: 0 10px;
+              margin-top: 40%;   
+          }}
+        @media only screen and (max-width: 425px) {
+            .adminProfileContainer{
+                width: 378px;
+            }
+          }
