--- a/frontend/src/Components/Style/Sidebar.css
+++ b/frontend/src/Components/Style/Sidebar.css
@@ -41,7 +41,7 @@
         width:60px;
         display: flex;
         flex-direction: row;
-        padding-left: 20px;
+        padding: 15px;
         size: 4x;
     }
     .sidebar .nav-link span{
