--- a/frontend/src/Components/Style/AdminUni.css
+++ b/frontend/src/Components/Style/AdminUni.css
@@ -21,7 +21,7 @@
     margin-top: 5%;
   }
   
-  .form {
+  .uni .form {
     max-width: 350px;
     padding: 25px;
     border-radius: 10px;
@@ -33,7 +33,7 @@
     margin-left: 21%;
   }
   
-  input {
+  .uni input {
     padding: 10px;
     font-size: 16px;
     margin-right: 10px;
@@ -44,7 +44,7 @@
     margin-bottom: 15px !important;
   }
   
-  button {
+  .uni button {
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
