--- a/frontend/src/Components/Style/AdminFac.css
+++ b/frontend/src/Components/Style/AdminFac.css
@@ -39,6 +39,12 @@
     border: none;
 
   }
+  .university-list .id{
+    background-color: var(--blue);
+    padding: 10px;
+    border-radius: 20px;
+    color: var(--white);
+  }
   .faculty-list {
     background-color: var(--white);
     list-style-type: none;
