--- a/frontend/src/Components/Style/AdminUni.css
+++ b/frontend/src/Components/Style/AdminUni.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Freeman&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
     box-sizing: border-box;
   }
   
   body {
-    font-family: Arial, sans-serif;
+    font-family: "Kanit", sans-serif;
     margin: 0;
     padding: 0;
   }
@@ -18,7 +20,7 @@
   .uni  h1 {
     color: var(--blue) !important;
     margin-right: 15%;
-    margin-top: 5%;
+    margin-top: 1%;
   }
   
   .uni .form {
@@ -29,7 +31,7 @@
     background-color: var(--blue);
     display: flex;
     justify-content: center;
-    margin-top: 15%;
+    margin-top: 10%;
     margin-left: 21%;
   }
   
