--- a/frontend/src/Components/Style/UserManagement.css
+++ b/frontend/src/Components/Style/UserManagement.css
@@ -20,8 +20,9 @@
     border-radius: 10px;
     color: var(--white);
 }
-.AdminPro .typeChange h4{
+.AdminPro .typeChange h3{
     color: var(--pink);
+    margin-bottom: 15px;
 }
 .AdminPro .typeChange form{
     outline: none;
@@ -32,4 +33,14 @@
     border-radius: 10px;
     background-color: var(--orange) !important;
     border: none;
+}
+@media only screen and (max-width: 800px){
+    .AdminPro .typeChange{
+        width: 60%;
+    }
+}
+@media only screen and (max-width: 430px){
+    .AdminPro .typeChange{
+        width: 85%;
+    }
 }
